# crud_app_car

./: README.md  pyproject.toml
src/crud_app_car/: __main__.py  auth.py  db.py  db_mongo.py
test/: test.py
