[build-system]

requires = ["setuptools"]

build-backend = "setuptools.build_meta"



[project]

name = "crud_app_pedro"

version = "0.0.1"

authors = [

    {name="peanpepu", email="pedrop@uma.es"}

]

description = "A simple crud app"

readme = "README.md"



requires-python = ">=3.7"

classifierss = [

    "Develpment Status :: 2 - Pre-Alpha"

]



dependencies = [

    "cryptography",

    "pymysql>=1.0.0", #Comment

    "pymongo",

]



[project.urls]

"Homepage" = "https://github.com/" #Complete



[project.optional-dependencies]



dev = [

    "pytest",

    "black",

    "ruff"

]



